infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bible-php-api
  namespace: bible
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bible-php-api
  template:
    metadata:
      labels:
        app: bible-php-api
    spec:
      containers:
        - name: api
          image: rkeplin/bible-php-api:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 384Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: bible-php-api
  namespace: bible
spec:
  selector:
    app: bible-php-api
  ports:
    - name: http
      port: 80
      targetPort: 80
